# ECL-tests

./: .gitignore  CMakeLists.txt  run.sh
src/: defun.cpp  ecl.hpp  fibonacci.c  function_traits.hpp  main.cpp
src/scripts/: fibonacci.lisp
